// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<MailingListItem /> should renders correctly 1`] = `
<MailingListItemstyle__Container
  rowId="1"
  selected={false}
>
  <MailingListItemstyle__ButtonMembers
    onClick={[Function]}
    type="button"
  >
    Je suis une mailing list
  </MailingListItemstyle__ButtonMembers>
  <p
    className="project-title"
  >
    Je suis un titre de projet
  </p>
  <ForwardRef
    align="center"
    direction="row"
  >
    <ForwardRef>
      <Icon
        color="gray.500"
        mr={1}
        name="USER_O"
        size="md"
      />
      <Text
        as="span"
        mr={1}
      >
        1
      </Text>
      <Text>
        <FormattedMessage
          id="global.members"
          values={
            Object {
              "num": 1,
            }
          }
        />
      </Text>
    </ForwardRef>
    <Tooltip
      label="has-consent-to-internal-email"
    >
      <ForwardRef
        ml={1}
      >
        <Icon
          color="blue.500"
          name="CIRCLE_INFO"
          size="md"
        />
      </ForwardRef>
    </Tooltip>
  </ForwardRef>
</MailingListItemstyle__Container>
`;

exports[`<MailingListItem /> should renders correctly when selected 1`] = `
<MailingListItemstyle__Container
  rowId="1"
  selected={true}
>
  <MailingListItemstyle__ButtonMembers
    onClick={[Function]}
    type="button"
  >
    Je suis une mailing list
  </MailingListItemstyle__ButtonMembers>
  <p
    className="project-title"
  >
    Je suis un titre de projet
  </p>
  <ForwardRef
    align="center"
    direction="row"
  >
    <ForwardRef>
      <Icon
        color="gray.500"
        mr={1}
        name="USER_O"
        size="md"
      />
      <Text
        as="span"
        mr={1}
      >
        1
      </Text>
      <Text>
        <FormattedMessage
          id="global.members"
          values={
            Object {
              "num": 1,
            }
          }
        />
      </Text>
    </ForwardRef>
    <Tooltip
      label="has-consent-to-internal-email"
    >
      <ForwardRef
        ml={1}
      >
        <Icon
          color="blue.500"
          name="CIRCLE_INFO"
          size="md"
        />
      </ForwardRef>
    </Tooltip>
  </ForwardRef>
</MailingListItemstyle__Container>
`;
